The use of obsolete wrapper classes has been replaced by modern primitives. Unnecessary imports have been removed.